--- a/part1_airflow/notebooks/test.ipynb
+++ b/part1_airflow/notebooks/test.ipynb
@@ -846,6 +846,211 @@
    "source": [
     "data.shape"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Функция удаления таблицы с помощью sqlalchemy\n",
+    "def delete_table(table_name, conn):\n",
+    "    metadata = MetaData(bind=conn)\n",
+    "    table = Table(table_name, metadata, autoload=True)\n",
+    "    table.drop(conn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "delete_table('flats_churn', dst_conn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>floor</th>\n",
+       "      <th>is_apartment</th>\n",
+       "      <th>kitchen_area</th>\n",
+       "      <th>living_area</th>\n",
+       "      <th>rooms</th>\n",
+       "      <th>studio</th>\n",
+       "      <th>total_area</th>\n",
+       "      <th>price</th>\n",
+       "      <th>build_year</th>\n",
+       "      <th>building_type_int</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>ceiling_height</th>\n",
+       "      <th>flats_count</th>\n",
+       "      <th>floors_total</th>\n",
+       "      <th>has_elevator</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>37500</td>\n",
+       "      <td>8</td>\n",
+       "      <td>False</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>False</td>\n",
+       "      <td>59.900002</td>\n",
+       "      <td>13800000.0</td>\n",
+       "      <td>2003</td>\n",
+       "      <td>4</td>\n",
+       "      <td>55.646431</td>\n",
+       "      <td>37.494835</td>\n",
+       "      <td>2.64</td>\n",
+       "      <td>268</td>\n",
+       "      <td>17</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>37501</td>\n",
+       "      <td>15</td>\n",
+       "      <td>False</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>28.9</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "      <td>45.799999</td>\n",
+       "      <td>9000000.0</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>2</td>\n",
+       "      <td>55.577724</td>\n",
+       "      <td>37.478943</td>\n",
+       "      <td>2.64</td>\n",
+       "      <td>569</td>\n",
+       "      <td>25</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>37502</td>\n",
+       "      <td>3</td>\n",
+       "      <td>False</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "      <td>40.000000</td>\n",
+       "      <td>8700000.0</td>\n",
+       "      <td>1967</td>\n",
+       "      <td>1</td>\n",
+       "      <td>55.731770</td>\n",
+       "      <td>37.535114</td>\n",
+       "      <td>2.70</td>\n",
+       "      <td>433</td>\n",
+       "      <td>10</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>37503</td>\n",
+       "      <td>13</td>\n",
+       "      <td>False</td>\n",
+       "      <td>8.6</td>\n",
+       "      <td>30.1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>False</td>\n",
+       "      <td>52.000000</td>\n",
+       "      <td>9498000.0</td>\n",
+       "      <td>1986</td>\n",
+       "      <td>4</td>\n",
+       "      <td>55.639084</td>\n",
+       "      <td>37.767216</td>\n",
+       "      <td>2.65</td>\n",
+       "      <td>360</td>\n",
+       "      <td>14</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>37504</td>\n",
+       "      <td>3</td>\n",
+       "      <td>False</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>False</td>\n",
+       "      <td>70.000000</td>\n",
+       "      <td>12990000.0</td>\n",
+       "      <td>1955</td>\n",
+       "      <td>1</td>\n",
+       "      <td>55.662186</td>\n",
+       "      <td>37.630501</td>\n",
+       "      <td>3.00</td>\n",
+       "      <td>287</td>\n",
+       "      <td>8</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      id  floor  is_apartment  kitchen_area  living_area  rooms  studio  \\\n",
+       "0  37500      8         False          10.0          0.0      2   False   \n",
+       "1  37501     15         False           5.0         28.9      1   False   \n",
+       "2  37502      3         False          10.0          0.0      1   False   \n",
+       "3  37503     13         False           8.6         30.1      2   False   \n",
+       "4  37504      3         False          10.0          0.0      2   False   \n",
+       "\n",
+       "   total_area       price  build_year  building_type_int   latitude  \\\n",
+       "0   59.900002  13800000.0        2003                  4  55.646431   \n",
+       "1   45.799999   9000000.0        2018                  2  55.577724   \n",
+       "2   40.000000   8700000.0        1967                  1  55.731770   \n",
+       "3   52.000000   9498000.0        1986                  4  55.639084   \n",
+       "4   70.000000  12990000.0        1955                  1  55.662186   \n",
+       "\n",
+       "   longitude  ceiling_height  flats_count  floors_total  has_elevator  \n",
+       "0  37.494835            2.64          268            17          True  \n",
+       "1  37.478943            2.64          569            25          True  \n",
+       "2  37.535114            2.70          433            10          True  \n",
+       "3  37.767216            2.65          360            14          True  \n",
+       "4  37.630501            3.00          287             8          True  "
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = pd.read_sql(f'select * from clean_flats_churn', dst_conn)\n",
+    "data.head()"
+   ]
   }
  ],
  "metadata": {
